# NATS-WebUI

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  sqlite.db  sqlite.db-journal  sqlite.db.BAK
screenshots/: screenshot2  screenshot3
src/: datatypes.rs  main.rs  sql.rs
web/: package-lock.json  package.json
web/fonts/: Lexend+Exa_400_normal.eot  Lexend+Mega_400_normal.eot  fonts.css
web/public/: index.html
web/src/: App.vue  main.js
web/src/components/: Client.vue  ClientList.vue  Monitor.vue  ServerList.vue
web/src/store/: index.js
