[package]
name = "NATS-WebUI"
version = "0.1.0"
authors = ["Theodore Lee <sphqxelzlt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rants = "0.4"
tokio = { version = "0.2", features = ["macros", "full"] }
warp = "0.2"
log = "0.4"
simple_logger="1.0"