[package]
name = "NATS-WebUI"
version = "0.1.0"
authors = ["Theodore Lee <sphqxelzlt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rants = { path = "../rants" }
tokio = { version = "0.2", features = ["macros", "full", "rt-core", "sync", "time"] }
warp = "0.2"
log = "0.4"
simple_logger="1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
reqwest = { version = "0.10", features = ["json"] }
rusqlite = "0.21"
serde_json = "1.0"
http = "0.2"
futures-util = "0.3"
futures = "0.3"